// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating component Customized rating component 1`] = `
<div
  class="rating color--dark-blue editing"
>
  <i
    class="fas rating__star fa-star rating__star--selected"
  />
  <i
    class="fas rating__star fa-star rating__star--selected"
  />
  <i
    class="fas rating__star fa-star rating__star--selected"
  />
  <i
    class="fas rating__star fa-star"
  />
  <i
    class="fas rating__star fa-star"
  />
</div>
`;

exports[`Rating component Default rating component 1`] = `
<div
  class="rating color--dark-orange"
>
  <i
    class="fas rating__star fa-star rating__star--selected"
  />
  <i
    class="fas rating__star fa-star rating__star--selected"
  />
  <i
    class="fas rating__star fa-star rating__star--selected"
  />
</div>
`;
